[package]
name = "password_manager"
version = "0.1.0"
authors = ["Mader Noob <madernoob@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.80"
chacha20 = "0.6.0"
rand = "0.7.3"
generic-array = "0.14.4"
sha2 = "0.9.2"